--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
 
 <div class="container">
-    <h1>Из какого овоща вырезали фонари до тыквы?</h1>
+    <h1>Какого цвета свитер у главного героя фильма "Кошмар на улице Вязов"?</h1>
     <div class="options">
         <label><input type="radio" name="answer" value="1"> Красно-синего</label>
         <label><input type="radio" name="answer" value="2"> Оранжево-зеленого</label>
